--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
 before_install: 
     - docker build -t allenguodocker/sample-app -f dockerfile.dev .
 script:     
-    - docker run -e CI=true yuwangjr/sample-app npm run test -- --coverage --watchAll=false
+    - docker run -e CI=true allenguodocker/sample-app npm run test -- --coverage --watchAll=false
 
 deploy:
   provider: elasticbeanstalk
